test-files/cmd/quick/BadJavaScriptTranslation.sh.stdout
20:26:27.831 INFO  ...ot/js/JavaScriptTranslator.cpp( 232) Loading script: test-files/cmd/slow/tSimple.js
Initialize works!
20:26:27.859 ERROR ...ot/js/JavaScriptTranslator.cpp( 353) Error initializing JavaScript: test-files/cmd/slow/tSimple.js (63) 
    if (translate !== undefined)
    ^ 
ReferenceError: translate is not defined
20:26:27.859 INFO  ...t/core/io/PythonTranslator.cpp(  68) Initializing Python
20:26:27.859 INFO  ...t/core/io/PythonTranslator.cpp(  99) Python path: translations:PYTHONPATH:/home/vagrant/hoot/translations
20:26:28.864 INFO  ...ot/js/JavaScriptTranslator.cpp( 232) Loading script: plugins/BadSyntaxTest.js
20:26:28.889 ERROR ...ot/js/JavaScriptTranslator.cpp( 353) Error initializing JavaScript: plugins/BadSyntaxTest.js (4) 
foo is bad.
    ^^ 
SyntaxError: Unexpected identifier
20:26:28.889 INFO  ...t/core/io/PythonTranslator.cpp(  68) Initializing Python
20:26:28.889 INFO  ...t/core/io/PythonTranslator.cpp(  99) Python path: translations:PYTHONPATH:/home/vagrant/hoot/translations
20:26:29.863 INFO  ...ot/js/JavaScriptTranslator.cpp( 232) Loading script: test-files/cmd/slow/BadRequire.js
20:26:29.890 ERROR ...ot/js/JavaScriptTranslator.cpp( 353) Error initializing JavaScript: /home/vagrant/hoot/plugins/BadSyntaxTest.js (4) 
foo is bad.
    ^^ 
SyntaxError: Unexpected identifier
20:26:29.891 INFO  ...t/core/io/PythonTranslator.cpp(  68) Initializing Python
20:26:29.891 INFO  ...t/core/io/PythonTranslator.cpp(  99) Python path: translations:PYTHONPATH:/home/vagrant/hoot/translations
